--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 {% endif %}
 
     <form id="sajuForm" action="/analyze_web" method="POST" class="w-full max-w-md bg-white rounded-[32px] shadow-sm p-7 space-y-8 mt-4">
-        <h1 class="text-center font-bold text-[20px] mb-2">포스텔러 만세력 2.2 🌟</h1>
+        <h1 class="text-center font-bold text-[20px] mb-2">만세력</h1>
 
         <div class="space-y-3">
             <label class="font-bold text-[17px] text-[#333]">이름</label>
